--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.1"
+    "mongoose": "^7.1.0"
   }
 }
