--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
